--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,12 @@
+/*
+	RESET DEFAULTS
+	/////////////////////////////////////////////////////////////////////////////////////////////
+*/
 * {
   margin: 0;
   padding: 0;
   border: 0;
+  font-family: sans-serif;
 }
 
 a {
@@ -13,6 +18,10 @@ ol, ul {
   list-style: none;
 }
 
+/*
+	GLOBAL STYLING
+	/////////////////////////////////////////////////////////////////////////////////////////////
+*/
 img {
   width: 100%;
   height: auto;
@@ -22,21 +31,41 @@ img {
 div.container {
   margin: 20px;
 }
+@media (min-width: 768px) {
+  div.container {
+    margin: 40px;
+  }
+}
 
 .card {
   background-color: inherit;
   border-radius: 10px;
 }
 
+/*
+	RECIPE CARD COMPONENT
+	/////////////////////////////////////////////////////////////////////////////////////////////
+*/
 div.recipe-grid {
   display: grid;
   grid-gap: 20px;
   grid-template-columns: 1fr;
 }
+@media (min-width: 768px) {
+  div.recipe-grid {
+    grid-gap: 40px;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (min-width: 1440px) {
+  div.recipe-grid {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
 div.recipe-grid a.recipe-card {
   width: calc(100% - 80px);
   margin-left: 40px;
-  padding: 20px 20px 40px 20px;
+  padding: 20px;
   background-color: #d8d8d8;
   position: relative;
   transition: 0.3s ease-in-out;
@@ -53,18 +82,14 @@ div.recipe-grid a.recipe-card div.col-container div.col img.recipe-img {
 }
 div.recipe-grid a.recipe-card div.col-container div.col h2.recipe-name {
   font-size: 24px;
-  font-family: sans-serif;
   margin-bottom: 20px;
 }
 div.recipe-grid a.recipe-card div.col-container div.col div.recipe-info {
   display: flex;
 }
-div.recipe-grid a.recipe-card div.col-container div.col div.recipe-info p:first-child {
-  margin-right: 80px;
-}
 div.recipe-grid a.recipe-card div.col-container #recipe-content {
-  width: 30%;
-  margin-left: 40px;
+  width: 50%;
+  margin-left: 20px;
 }
 div.recipe-grid a.recipe-card:hover {
   width: calc(100% - 40px);
@@ -72,6 +97,30 @@ div.recipe-grid a.recipe-card:hover {
 }
 div.recipe-grid a.recipe-card:hover > div.col-container > div.col > img.recipe-img {
   margin-left: 0;
+}
+
+/*
+	FILTER TAG COMPONENT
+	/////////////////////////////////////////////////////////////////////////////////////////////
+*/
+div.filters {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+}
+div.filters a.filter-tag {
+  color: #fff;
+  font-size: 12px;
+  padding: 10px;
+  margin-right: 10px;
+  background-color: gray;
+  opacity: 0.8;
+  transition: 0.3s ease-in-out;
+}
+div.filters a.filter-tag:hover {
+  opacity: 1;
 }
 
 /*# sourceMappingURL=style.css.map */
