--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,15 @@
+@import "breakpoints";
+
+/*
+	RESET DEFAULTS
+	/////////////////////////////////////////////////////////////////////////////////////////////
+*/
+
 * {
 	margin: 0;
 	padding: 0;
 	border: 0;
+	font-family: sans-serif;
 }
 
 a {
@@ -13,6 +21,11 @@ ol, ul {
 	list-style: none;
 }
 
+/*
+	GLOBAL STYLING
+	/////////////////////////////////////////////////////////////////////////////////////////////
+*/
+
 img {
 	width: 100%;
 	height: auto;
@@ -21,6 +34,10 @@ img {
 
 div.container {
 	margin: 20px;
+	
+	@include tablet {
+		margin: 40px;
+	}
 }
 
 .card {
@@ -28,15 +45,29 @@ div.container {
 	border-radius: 10px;
 }
 
+/*
+	RECIPE CARD COMPONENT
+	/////////////////////////////////////////////////////////////////////////////////////////////
+*/
+
 div.recipe-grid {
 	display: grid;
 	grid-gap: 20px;
     grid-template-columns: 1fr;
 	
+	@include tablet {
+		grid-gap: 40px;
+		grid-template-columns: 1fr 1fr;
+	}
+	
+	@include desktop {
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+	}
+	
 	a.recipe-card {
 		width: calc(100% - 80px);
 		margin-left: 40px;
-		padding: 20px 20px 40px 20px;
+		padding: 20px;
 		background-color: #d8d8d8;
 		position: relative;
 		transition: 0.3s ease-in-out;
@@ -56,22 +87,17 @@ div.recipe-grid {
 				
 				h2.recipe-name {
 					font-size: 24px;
-					font-family: sans-serif;
 					margin-bottom: 20px;
 				}
 				
 				div.recipe-info {
 					display: flex;
-					
-					p:first-child {
-						margin-right: 80px;
-					}
 				}
 			}
 			
 			#recipe-content {
-				width: 30%;
-				margin-left: 40px;
+				width: 50%;
+				margin-left: 20px;
 			}
 		}
 	}
@@ -83,5 +109,32 @@ div.recipe-grid {
 	
 	a.recipe-card:hover > div.col-container > div.col > img.recipe-img {
 		margin-left: 0;
+	}
+}
+
+/*
+	FILTER TAG COMPONENT
+	/////////////////////////////////////////////////////////////////////////////////////////////
+*/
+
+div.filters {
+	margin-top: 15px;
+	display: flex;
+	flex-direction: row;
+    align-items: center;
+    justify-content: flex-start; 
+	
+	a.filter-tag {
+		color: #fff;
+		font-size: 12px;
+		padding: 10px;
+		margin-right: 10px;
+		background-color: gray;
+		opacity: 0.8;
+		transition: 0.3s ease-in-out;
+	}
+	
+	a.filter-tag:hover {
+		opacity: 1;
 	}
 }
