--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -46,6 +46,32 @@ div.container {
 }
 
 /*
+	SEARCH BAR STYLING
+	/////////////////////////////////////////////////////////////////////////////////////////////
+*/
+
+form.search-form {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	
+	input.search-bar {
+		font-size: 12px;
+		width: calc(100% - 70px);
+		height: 50px;
+		margin: 0 20px 20px 0;
+		background-color: #d8d8d8;
+		text-indent: 20px;
+	}
+	
+	a.account {
+		width: 50px;
+		height: 50px;
+		overflow: hidden;
+	}
+}
+
+/*
 	RECIPE CARD COMPONENT
 	/////////////////////////////////////////////////////////////////////////////////////////////
 */
