--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,3 +4,16 @@
   margin: 0;
   padding: 0;
 }
+
+.ant-row {
+  margin-right: 0 !important;
+  margin-left: 0 !important;
+}
+
+.ant-col:first-child {
+  padding-left: 0 !important;
+}
+
+.ant-col:last-child {
+  padding-right: 0 !important;
+}
